--- a/style/_header.scss
+++ b/style/_header.scss
@@ -15,6 +15,7 @@ header {
             .essentielle {
                 width: 200px;
                 height: auto;
+                padding-right: 20px;
             }
             
             .btn_adresse {
@@ -44,7 +45,7 @@ header {
                     position: relative;
                     top: 15px;
                     left: 15px;
-                    background-image : url(https://img.icons8.com/ios-filled/50/26e07f/order-delivered.png);
+                    background-image : url(https://i.postimg.cc/CZjcDXxN/Location-1.png);
                     background-size:cover;
                     
                     
@@ -55,10 +56,13 @@ header {
                 background-color: #83A04E;
                 color: #FFFFFF;
                 .imgg{
-                 background-image : url(https://img.icons8.com/ios/50/26e07f/order-delivered.png);
-                    background-size:cover;   
+                    background-color: #83A04E;
+                 background-image : url(https://i.postimg.cc/CZyvRSS5/Location.png);
+                    background-size:cover;  
                 }
-                
+                a{
+                color: #FFFFFF;
+                }
                 
             }
         }
@@ -66,18 +70,23 @@ header {
         .lb_3-5 {
             cursor: pointer;
             margin-left: auto;
+            
+            
 
             .provencesanté {
                 width: 146px;
                 height: auto;
+                padding-right: 20px;
             }
             .bloomea {
                 width: 130px;
                 height: auto;
+                padding-right: 20px;
             }
             .allonature {
                 width: 80px;
                 height: auto;
+                padding-right: 20px;
             }
         }
 
@@ -92,17 +101,17 @@ header {
           display: flex;
           justify-content: center;
           align-items: center; 
-          background-color: #73923A;
+          background: none;
           text-decoration: none; 
           list-style: none;
-          
           color: #FFFFFF;
           font-size: 16px;
           padding-top: 10px;
-padding-bottom: 5px;
-padding-left: 15px;
-padding-right: 15px;
+          padding-bottom: 5px;
+        //   padding-left: 15px;
+          padding-right: 0.9vw;
       }
+      
       span{
           display: flex;
           
@@ -115,6 +124,230 @@ padding-right: 15px;
           
       }
     }
-    
+    .header_img, img{
+        position: relative;
+width: 100%;
+        .header_img_caption{
+            
+            height: auto;
+            color: #FFFFFF;
+            background-color: #ffffff46;
+            position: absolute;
+            top: 25%;
+            left: 25%;
+            right: 25%;
+            display: flex;
+            align-items: center;
+            align-content: center;
+            justify-content: center; 
+            text-align: center;
+            font-size: 4.8vw;   
+            font-family: 'Newsreader';      
+        }
+    }
 
 }
+@media screen and (max-width:1080px){
+    .header1 {
+        display: flex;
+        justify-content: flex-end;
+        align-items: center;
+        padding: 10px 2%;
+        .lb_1-2 {
+            display: flex;
+            align-items: center;
+            cursor: pointer;
+
+            margin-right: auto;
+
+            .essentielle {
+                width: 200px;
+                height: auto;
+                padding-right: 20px;
+            }
+            
+            .btn_adresse {
+                display:none;                                                      
+            }
+            
+        }
+
+        .lb_3-5 {
+            cursor: pointer;
+            margin-left: auto;
+
+            .provencesanté {
+                width: 146px;
+                height: auto;
+                padding-right: 20px;
+            }
+            .bloomea {
+                width: 130px;
+                height: auto;
+                padding-right: 20px;
+            }
+            .allonature {
+                width: 80px;
+                height: auto;
+                padding-right: 20px;
+            }
+        }
+
+        
+    }
+    
+.header2, .navbar{
+        background-color: #73923A;
+        width: 100%;
+        height: 100px;
+            
+      .navlink, .navlinks, a{
+          display: flex;
+          justify-content: center;
+          align-items: center; 
+          background: none;
+          text-decoration: none; 
+          list-style: none;
+          color: #FFFFFF;
+          font-size: 16px;
+          padding-top: 10px;
+          padding-bottom: 5px;
+        //   padding-left: 15px;
+          padding-right: 0.9vw;
+      }
+      
+      span{
+          display: flex;
+          
+          
+        color: #FFFFFF;
+          width: 80%;
+          height: 3px;
+          margin-left: 10%;
+          border-radius: 90px;
+          
+      }
+    }
+    .header_img{
+        width: 100%;
+        .header_img_caption{
+            width: 50%;
+            height: 300px;
+            color: #FFFFFF;
+            background-color: #ffffff46;
+            position: absolute;
+            top: 15%;
+            left: 25%;
+            right: 25%;
+            display: flex;
+            align-items: center;
+            align-content: center;
+            justify-content: center; 
+            text-align: center;
+            font-size: 58px;   
+            font-family: 'Newsreader';      
+        }
+    }
+
+}
+@media screen and (max-width:1080px){
+    .header1 {
+        display: flex;
+        justify-content: flex-end;
+        align-items: center;
+        padding: 10px 2%;
+        .lb_1-2 {
+            display: flex;
+            align-items: center;
+            cursor: pointer;
+
+            margin-right: auto;
+
+            .essentielle {
+                width: 200px;
+                height: auto;
+                padding-right: 20px;
+            }
+            
+            .btn_adresse {
+                display:none;                                                      
+            }
+            
+        }
+
+        .lb_3-5 {
+            cursor: pointer;
+            margin-left: auto;
+
+            .provencesanté {
+                width: 146px;
+                height: auto;
+                padding-right: 20px;
+            }
+            .bloomea {
+                width: 130px;
+                height: auto;
+                padding-right: 20px;
+            }
+            .allonature {
+                width: 80px;
+                height: auto;
+                padding-right: 20px;
+            }
+        }
+
+        
+    }
+    .header2, .navbar{
+        background-color: #73923A;
+        width: 100%;
+        height: 100px;
+            
+      .navlink, .navlinks, .a_navlinks{
+          display: flex;
+          justify-content: center;
+          align-items: center; 
+          background: none;
+          text-decoration: none; 
+          list-style: none;
+          color: #FFFFFF;
+          font-size: 14px;
+          padding-top: 10px;
+          padding-bottom: 5px;
+        //   padding-left: 15px;
+          padding-right: 0.9vw;
+      }
+      
+      .span_header{
+          display: flex;
+          color: #FFFFFF;
+          width: 90%;
+          height: 3px;
+          margin-left: 5%;
+          margin-right: 5%;
+          border-radius: 90px;
+          
+      }
+    }
+    .header_img{
+position: relative;
+        .header_img_caption{
+            width: 50%;
+            height: 300px;
+            color: #FFFFFF;
+            background-color: #ffffff46;
+            position: absolute;
+            top: 15%;
+            left: 25%;
+            right: 25%;
+            display: flex;
+            align-items: center;
+            align-content: center;
+            justify-content: center; 
+            text-align: center;
+            font-size: 58px;   
+            font-family: 'Newsreader';      
+        }
+    }
+}
+    
