--- a/style/_header.scss
+++ b/style/_header.scss
@@ -30,7 +30,7 @@ header {
                     text-decoration: none;
                     color: #000000;
                     display: inline-block;
-                    padding-left: 20px;
+                    padding-left: 40px;
                    
                     position: relative;
                     bottom: 15px;
@@ -91,12 +91,16 @@ header {
         }
 
     }
-
+.navbar_bootstrap{
+            display: none;
+        } 
     .header2, .navbar{
         background-color: #73923A;
         width: 100%;
         height: 100px;
             
+        
+        
       .navlink, .navlinks, .a_navlinks{
           display: flex;
           justify-content: center;
@@ -124,7 +128,7 @@ header {
     }
     .header_img, img{
         position: relative;
-width: 100%;
+        width: 100%;
         .header_img_caption{
             
             height: auto;
