--- a/style/output.css
+++ b/style/output.css
@@ -11155,7 +11155,7 @@ header .header1 .lb_1-2 .btn_adresse .adresse_links {
   text-decoration: none;
   color: #000000;
   display: inline-block;
-  padding-left: 20px;
+  padding-left: 40px;
   position: relative;
   bottom: 15px;
 }
@@ -11198,6 +11198,9 @@ header .header1 .lb_3-5 .allonature {
   width: 80px;
   height: auto;
   padding-right: 20px;
+}
+header .navbar_bootstrap {
+  display: none;
 }
 header .header2, header .navbar {
   background-color: #73923A;
@@ -11249,7 +11252,11 @@ header .header_img .header_img_caption, header img .header_img_caption {
 .institut_article1_title {
   display: flex;
   justify-content: center;
-  padding: 50px;
+  padding-bottom: 50px;
+  padding-top: 50px;
+  padding-left: 10px;
+  padding-right: 10px;
+  text-align: center;
 }
 
 .institut_article1 {
@@ -11260,9 +11267,9 @@ header .header_img .header_img_caption, header img .header_img_caption {
 .institut_article1 .institut_article1_p {
   display: flex;
   text-align: justify;
-  width: 585px;
+  max-width: 585px;
+  width: 80%;
   height: 469px;
-  margin-right: 30px;
 }
 .institut_article1 .institut_article1_p .article1_p {
   padding-top: 20px;
@@ -11281,7 +11288,8 @@ header .header_img .header_img_caption, header img .header_img_caption {
   background-color: #83A04E;
 }
 .institut_article1 .institut_article1_img {
-  margin-left: 30px;
+  width: 46vw;
+  padding-left: 40px;
 }
 
 .offre1 {
@@ -11299,6 +11307,7 @@ header .header_img .header_img_caption, header img .header_img_caption {
   width: 400px;
   font-size: 28px;
   color: #FFFFFF;
+  font-weight: bold;
 }
 
 .prestation {
@@ -11478,7 +11487,7 @@ footer .footer2 ul, footer .footer2 li, footer .footer2 a {
   color: #1414139c;
 }
 
-@media screen and (max-width: 860px) {
+@media screen and (max-width: 1060px) {
   .container-fluid, .container-sm, .container-md, .container-lg, .container-xl, .container-xxl {
     padding-right: 0px;
     padding-left: 0px;
@@ -11632,6 +11641,153 @@ footer .footer2 ul, footer .footer2 li, footer .footer2 a {
   .footer1 .footer_info {
     margin-top: 50px;
   }
+}
+@media screen and (max-width: 860px) {
+  .navbar_bootstrap {
+    display: contents !important;
+  }
+
+  .horaires_smart {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .offre1 {
+    margin-top: 750px;
+  }
+
+  .institut_article1_img {
+    width: 90vw !important;
+  }
+
+  .prestation {
+    display: flex;
+    justify-content: center;
+    margin-top: 25px;
+    flex-direction: column;
+    margin-inline: 30px !important;
+  }
+
+  .cards_prestation {
+    margin-bottom: 260px;
+    width: auto !important;
+  }
+
+  .btn_cards_prestation_a {
+    margin-top: 0px !important;
+  }
+
+  .btn_cards_prestation {
+    margin-top: 0px !important;
+  }
+
+  .nous_contacter {
+    margin-top: -120px !important;
+  }
+
+  .petitplus {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .petitplus_div {
+    margin-bottom: 40px !important;
+  }
+}
+:root {
+  --error-color: #dc3545;
+  --success-color: #28a745;
+  --warning-color: #ffc107;
+}
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body {
+  font-family: "Open Sans", sans-serif;
+  font-size: 16px;
+  background-color: #FFFFFF;
+  min-height: 100vh;
+  margin: 0;
+}
+
+.container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: #fff;
+  padding: 1em;
+  border-radius: 5px;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
+  width: 600px;
+}
+
+.form {
+  padding: 10px 20px;
+}
+
+.form h1, .form .h1 {
+  font-size: 1.5em;
+  text-align: center;
+  margin-bottom: 20px;
+}
+
+.form-field {
+  margin-bottom: 5px;
+}
+
+.form-field label {
+  display: block;
+  color: #000000;
+  margin-bottom: 5px;
+}
+
+.form-field input, .form-field select {
+  border: solid 2px #f0f0f0;
+  border-radius: 3px;
+  padding: 10px;
+  margin-bottom: 5px;
+  font-size: 14px;
+  display: block;
+  width: 100%;
+}
+
+.form-field input:focus, .form-field select:focus {
+  outline: none;
+}
+
+.form-field.error input {
+  border-color: var(--error-color);
+}
+
+.form-field.success input {
+  border-color: var(--success-color);
+}
+
+.form-field small, .form-field .small {
+  color: var(--error-color);
+}
+
+.btn {
+  background-color: #83A04E;
+}
+
+.bannieri {
+  margin-top: 100px;
+  width: 100%;
+  justify-content: center;
+  display: flex;
+}
+
+.bannierp {
+  width: 80%;
+  margin-inline: 150px;
+  margin-top: 50px;
+  text-align: center;
 }
 
 /*# sourceMappingURL=output.css.map */
